manifests/01-gitlab/50-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
  annotations: 
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
  - hosts:
      - gitlab.kooijman.se
      - reg.gitlab.kooijman.se
    secretName: gitlab-kooijman-tls
  rules:
  - host: gitlab.kooijman.se
    http:
      paths:
        - backend:
            service:
              name: gitlab
              port:
                number: 80
          path: /
          pathType: Prefix
  - host: reg.gitlab.kooijman.se
    http:
      paths:
        - backend:
            service:
              name: gitlab
              port:
                number: 5050
          path: /
          pathType: Prefix
